--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
                 <a class="link" href="">Contact</a>
             </nav>
         </header>
-        <section class="banner">
+        <div class="banner">
             <div class="Content">
                 <p class="content1">Branding | Image making</p>
                 <h3 class="content2">My awesome portfolio</h3>
@@ -25,7 +25,7 @@
             <div class="bannerImage">
                 <img src="./public/img/banner1.png" alt="">
             </div>
-        </section>
+        </div>
 
         <div class="banner2">
             <div class="box1">
